--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "16.0.0",
     "@testing-library/user-event": "14.5.2",
     "bootstrap": "5.3.3",
+    "font-awesome": "^4.7.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-scripts": "5.0.1",
