--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "0.1.0",
   "description": "Backend for Emerald Coast Web Development",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
