--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
   "description": "Backend for Emerald Coast Web Development",
   "main": "server.js",
   "scripts": {
+    "start": "node ./backend/server.js",
+    "server": "nodemon ./backend/server.js",
+    "client": "npm start --prefix ./frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "data:import": "node ./backend/seeder.js",
+    "data:destroy": "node ./backend/seeder.js -d",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Devon Kiss",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.19.2",
     "mongoose": "^8.4.4"
   },
   "devDependencies": {
+    "colors": "^1.4.0",
     "concurrently": "^8.2.2",
+    "dotenv": "^16.4.5",
     "nodemon": "^3.1.4"
   }
 }
